-----------------------------
mapfinal-0.3.1:

新增：json持久化接口
新增：event事件管理接口

-----------------------------
mapfinal-0.3:

新增：加入操作器
新增：操作器中加入抽稀压缩算法
新增：加入ResourceCache管理资源内存
新增：增加dbf的读取
新增：增加bundle格式的支持
优化：shp采用RandomAccessFile指定Feature读取
优化：shp显示加入点抽稀处理
优化：抽取Tile切片行列算法为调度器的索引算法
优化：优化图片缓存
优化：优化Resource的管理，强化ResourcceObject对资源的操作和管理。
优化：FeatureDispatcher中，索引结果再次判断包围盒交集，过滤索引结果
优化：将运行界面及swing相关的代码移植test中，如需启动窗口界面，请运行com.mapfinal.platform.develop.frame.MapFinalFrame
优化：重构resource资源管理器的所有代码
优化：分离Tile的resource和feature
优化：Tile和ScreenCacheImpl的屏幕大小缓存
优化：增加FeatureClass，改写TileFeature
优化：重构资源架构，采用资源目录-资源-数据结构管理资源
优化：优化Tile切片的销毁机制，减小内存占用
修复：修复文件下载后，写文件与读文件同时产生的读取错误

-----------------------------
mapfinal-0.2:

新增：shp文件读取和显示
新增：tile切片（TMS）读取和显示

-----------------------------
mapfinal-0.1:

新增：资源管理器、渲染器、图层管理器、转换器、调度器