@@ -3,6 +3,7 @@ mapfinal-0.3.1:
 
 新增：json持久化接口
 新增：event事件管理接口
+优化：添加注释，更名operator为processor
 
 -----------------------------
 mapfinal-0.3:
